Refactor code: remove duplicates